handle all the loose points and handle what happen if we update and delete the product from the cart